@@ -457,12 +457,6 @@ local mil_recipes = {
   'poison-capsule',
   'poison-mine',
   'poison-rocket-warhead',
-  'pollution-clean-processor',
-  'pollution-clean-processor-2',
-  'pollution-clean-processor-3',
-  'pollution-create-processor',
-  'pollution-create-processor-2',
-  'pollution-create-processor-3',
   'rifle',
   'robot-brain-combat',
   'robot-brain-combat-2',
